--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -1,22 +1,25 @@
 @tailwind base;
-
-@font-face {
-  font-family: 'Inter var';
-  font-weight: 100 900;
-  font-display: swap;
-  font-style: normal;
-  font-named-instance: 'Regular';
-  src: url('../fonts/Inter-roman.var-latin.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Inter var';
-  font-weight: 100 900;
-  font-display: swap;
-  font-style: italic;
-  font-named-instance: 'Italic';
-  src: url('../fonts/Inter-italic.var-latin.woff2') format('woff2');
-}
-
 @tailwind components;
 @tailwind utilities;
+
+html {
+  scroll-behavior: smooth;
+}
+
+@font-face {
+  font-family: 'Inter var';
+  font-weight: 100 900;
+  font-display: optional;
+  font-style: normal;
+  font-named-instance: 'Regular';
+  src: url(/fonts/Inter-roman.var-latin.woff2) format('woff2');
+}
+
+@font-face {
+  font-family: 'Inter var';
+  font-weight: 100 900;
+  font-display: optional;
+  font-style: italic;
+  font-named-instance: 'Italic';
+  src: url(/fonts/Inter-italic.var-latin.woff2) format('woff2');
+}
